--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
-        <h1>Portfolio of My Name</h1>
+        <h1>Portfolio of Myles Andersson</h1>
 		<section class="two-column">
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
@@ -26,7 +26,7 @@
                         <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
                     </div>
 					<h2>About Me</h2>
-					<p>Tell us about yourself. Add photos. Customize this. Go crazy.</p>
+					<p>Hi! Im Myles and I'm a 4th year CS:GD major. I enjoy spending time at the beach with my dogs and playing games! I am familiar with typescript and javascript, and currently trying to learn more on Unity. My favorite game is Hades!</p>
 			</div>
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
