--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
                     </div>
 					<h2>About Me</h2>
-					<p>Hi! Im Myles and I'm a 4th year CS:GD major. I enjoy spending time at the beach with my dogs and playing games! I am familiar with typescript and javascript, and currently trying to learn more on Unity. My favorite game is Hades!</p>
+					<p>Hi! Im Myles Andersson and I'm a 4th year CS:GD major. I enjoy spending time at the beach with my dogs and playing games! I am familiar with typescript and javascript, and currently trying to learn more on Unity. My favorite game is Hades!</p>
 			</div>
             <div class="minor-section">
                 <h2>Links to Experiments</h2>
