--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment 1 - Generator</title>
+	<title>Experiment 1 - Zoo enclosure Generator</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
