--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -46,17 +46,17 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>In this experiment I am aiming to create a lighthearted silly zoo enclosure generator.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>With the help of Glitch.com I was able to randomize the different variables into my zoo enclosure template to create new and interesting ideas after each press!</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>As the introductory assigmment I feel like I did well to understand all the different ways we can navigate the template, and provides a great basis for future assignments. In that vein, I did not have much difficulty when completing the assignment.</p>
 			</div>
 
 		</section>
