More things to put on portfolio

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
                     <div class="image-wrapper">
-                        <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+                        <img class="self" src="./img/self.jpg">
                     </div>
 					<h2>About Me</h2>
 					<p>Hi! Im Myles Andersson and I'm a 4th year CS:GD major. I enjoy spending time at the beach with my dogs and playing games! I am familiar with typescript and javascript, and currently trying to learn more on Unity. My favorite game is Hades!</p>
