--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -46,7 +46,7 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>Sunsets are beautiful and it served as the center point of my project, I aimed to make the sunset gradient the forfront of my generative image. Below you will see my inspirtation image, there is no link to the source, as I took it myself! Thank you for viewing my project.</p>
+				<p>Sunsets are beautiful and it served as the center point of my project, I aimed to make the sunset gradient the forfront of my generative image. Below you will see my inspirtation image, there is no link to the source, as I took it myself! By clicking on the "New Sky" button you can generate a brand new sunset! Thank you for viewing my project.</p>
 				<img src="img/sunset.jpg" alt="Description of the image" class="description-image">
 			</div>
 
