--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -23,7 +23,7 @@
 	<!-- Link to javascript files - DEFER waits until all elements are rendered -->
     <script type="text/javascript" src="../js/site.js" DEFER></script>
 	<!-- Use me for a JavaScript OOP Project -->
-	<script type="text/javascript" src="./js/project.js" DEFER></script>
+	<script type="text/javascript" src="./js/p2_solution.js" DEFER></script>
 	<!-- Use me for a p5.js project -->
 	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
 </head>
@@ -31,7 +31,6 @@
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
-
 			<h1>Experiment X - Subject/Topic</h1>
 
 			<div class="minor-section">
@@ -39,13 +38,17 @@
 					<!-- canvas will be added here -->
 				</div>
                 <div class="fullscreen-box">
+					<button id="reseedButton">reseed</button>
                     <button id="fullscreen">Fullscreen</button>
+                    <span id="seedReport"></span>
                 </div>
+                <!-- Add the ASCII box element -->
+                <textarea id="asciiBox" rows="10" cols="10" style="font-family: monospace;"></textarea>
 			</div>
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>What are you trying to accomplish with this experiment?</p>
 			</div>
 
 			<div class="minor-section">
@@ -57,7 +60,6 @@
 				<h2>Reflection</h2>
 				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
 			</div>
-
 		</section>
 		<nav id="links" class="minor-section">
 			<!-- Put link back to homepage here. -->
