--- a/experiment3/index.html
+++ b/experiment3/index.html
@@ -54,7 +54,7 @@
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Autotiling</p>
+				<p>Autotiling and Life!</p>
 				<p>Going step by step here are some of the most interesting portions of this assignment:</p>
 
 				<p>The changing of the walls to compliment the different dungeon sizes was thanks to a lookup array that assisted me in finding complimentary tiles with context information based on neighboring tiles. After recieving this information, I used a function that offset the current tile to create a smooth transtition from the tile I just placed. This was all possible due to assigning a 4-bit code to every tile that I then assessed before placing down the next tile to ensure smooth transitions.</p>
