--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -52,17 +52,22 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>My experiment allows the viewer to scroll through a beautiful beach sunset filled with all kinds of foliage and rushing waves, illuminating the light from the sun.</p>
+				<p>Clicking on water tiles causes a small ripple to occur. Clicking on sand tiles causes the viewer to place a seashell, rock, or starfish at random!</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>I utilized noise and sin functions to create the illusion of life and the passage of time. For example, the variations in the beach, rocky, and grassy biomes create are a direct result of noise functions in conjunction with any given seed. This allows for the environment to be more dynamic!</p>
+				<p>Sin/Cos functions came into play when creating the beach foliage, the shells, rocks, and starfish are results of complex polygons or sin/cos waves!</p>
+				<p>In the sky I utilized a function called "lerpColor()" to create the gradual gradient you see, ideally mimicing what you would see in real life.</p>
+				<p>As for the different biomes, I simply created boundaries for when/where rocks/grass could occur in the world. This allowed for a smooth and pleasent gradient to occur on the ground.</p>
+				<p>Lastly the ripple in the water is generated after the user clicks on any water portion of the map, it is generated from an ellipse that gradually gets bigger, before dissapating.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>In the end, I am proud of my work, but understand that I could have done better to create a more dynamic world for my experiment. I learned a lot about how noise functions and sin waves can be used to create the illusion of life in these kinds of works. In the same vein, the gradient from the sun was a challenge to implement as the many layers of the sky created more and more variables and colors to keep track of. However, the final result looks good in my opinion.</p>
 			</div>
 
 		</section>
