--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -67,7 +67,7 @@
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>In the end, I am proud of my work, but understand that I could have done better to create a more dynamic world for my experiment. I learned a lot about how noise functions and sin waves can be used to create the illusion of life in these kinds of works. In the same vein, the gradient from the sun was a challenge to implement as the many layers of the sky created more and more variables and colors to keep track of. However, the final result looks good in my opinion.</p>
+				<p>In the end, I am proud of my work, but understand that I could have done better to create a more dynamic world for my experiment. I learned a lot about how noise functions and sin waves can be used to create the illusion of life in these kinds of works. In the same vein, the gradient from the sun was a challenge to implement as the many layers of the sky created more and more variables and colors to keep track of. However, the final result looks good in my opinion and does well to bring the original image to life!</p>
 			</div>
 
 		</section>
