--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -46,7 +46,7 @@
 					<label for="world-key-input">World Key:
 						<input type="text" id="world-key-input" value="beach sunset">
 					</label>
-					<p>Arrow keys to scroll left and right. Clicking on the water and sand changes the tiles.</p>
+					<p>Arrow keys to scroll left and right. Start by scrolling to the left! Clicking on the water and sand changes the tiles.</p>
 				</div>
 			</div>
 
