--- a/experiment4/index.html
+++ b/experiment4/index.html
@@ -61,6 +61,7 @@
 				<p>I utilized noise and sin functions to create the illusion of life and the passage of time. For example, the variations in the beach, rocky, and grassy biomes create are a direct result of noise functions in conjunction with any given seed. This allows for the environment to be more dynamic!</p>
 				<p>Sin/Cos functions came into play when creating the beach foliage, the shells, rocks, and starfish are results of complex polygons or sin/cos waves!</p>
 				<p>In the sky I utilized a function called "lerpColor()" to create the gradual gradient you see, ideally mimicing what you would see in real life.</p>
+				<p>Variation in key also changes the hues on the environment as a result of the sun.</p>
 				<p>As for the different biomes, I simply created boundaries for when/where rocks/grass could occur in the world. This allowed for a smooth and pleasent gradient to occur on the ground.</p>
 				<p>Lastly the ripple in the water is generated after the user clicks on any water portion of the map, it is generated from an ellipse that gradually gets bigger, before dissapating.</p>
 			</div>
