--- a/experiment5/index.html
+++ b/experiment5/index.html
@@ -101,7 +101,7 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>In this programming assignment, we're building a generator that directly reads inspiring images, renders parameterized images, and adjusts its own designs to optimize an evaluation score.</p>
+				<p>In this programming assignment, I built a generator that directly reads inspiring images, renders parameterized images, and adjusts its own designs to optimize an evaluation score.</p>
 			</div>
 
 			<div class="minor-section">
