--- a/experiment5/index.html
+++ b/experiment5/index.html
@@ -112,7 +112,7 @@
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Ultimately, this experiment was less difficult for me compared to the previous ones, due to the starter code offered by Prof. Wes Modes. I felt pleasantly challenged by the experiment because I felt like it was more focused on the creative portion of the assignment as opposed to simply checking off requirements. I felt more free to express what I really wanted out of this experiment as a result, and I greatly appreciate that. I feel very satisfied with my final result and while I could have added more aspects that would elevate it further, I believe that I did the original images justice by bringing them to life. Lastly, here is a link to my repository with experiment five</p>
+				<p>Ultimately, this experiment was less difficult for me compared to the previous ones, due to the starter code offered by Prof. Wes Modes. I felt pleasantly challenged by the experiment because I felt like it was more focused on the creative portion of the assignment as opposed to simply checking off requirements. I felt more free to express what I really wanted out of this experiment as a result, and I greatly appreciate that. I feel very satisfied with my final result and while I could have added more aspects that would elevate it further, I believe that I did the original images justice by bringing them to life.</p>
 			</div>
 
 		</section>
