Implemented world and mushroom heads

--- a/GroupFinal/index.html
+++ b/GroupFinal/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>A Short Trip to an Infinite Journey</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -32,7 +33,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>A Short Trip to an Infinite Journey</h1>
 
 			<div class="minor-section">
 				<div id="canvas-container">
