Added L-system.js and fixed title

--- a/GroupFinal/index.html
+++ b/GroupFinal/index.html
@@ -27,13 +27,15 @@
 	<script type="text/javascript" src="./js/project.js" DEFER></script>
 	<!-- Use me for a p5.js project -->
 	<script type="text/javascript" src="./js/sketch.js" DEFER></script>
+
+	<script type="text/javascript" src="./js/lsystem.js" DEFER></script>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/experiment.css -->
 	<main id="content">
 		<section>
 
-			<h1>A Short Trip to an Infinite Journey</h1>
+			<h1>A Short Guide to an Infinite Trip</h1>
 
 			<div class="minor-section">
 				<div id="canvas-container">
