Added description to the website

--- a/GroupFinal/index.html
+++ b/GroupFinal/index.html
@@ -48,7 +48,7 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>The player walks on an infinite journey through a forestry path. If the player eats the red mushrooms, they get high. The more red mushrooms they eat, the higher they get (this will eventually be represented by an overlay getting more intense). If they eat the purple mushrooms, their health/hunger depletes and if they eat too much of it, they die. Brown mushrooms have no negative effects and provide the player with a boost to their hunger/health bar. The player’s hunger bar is constantly depleting so they will have to continue to eat mushrooms to avoid starvation. We wanted to give the players different venues to explore our game, they can simply enjoy the sunrise while consuming the brown mushrooms to keep going or see the different ways the overlay can evolve when eating poisonous mushrooms. Lastly, in the bottom right hand corner there will be a mushroom folio that the player can interact with to discern what mushrooms are safe for consumption.</p>
 			</div>
 
 			<div class="minor-section">
